<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">车易停</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="as_asslogan">去到哪，停到哪</string>

    <!-- 错误信息 -->
    <string name="as_connection_error">连接服务器失败，请稍后再试</string>
    <string name="as_connection_no_open">网络连接不可用，请检查网络配置</string>
    <string name="as_empty_error">请输入完整信息</string>
    <string name="as_no_match_email">请输入正确的邮箱地址</string>
    <string name="as_error_stop_time">请选择停止时间</string>
    <string name="as_error_start_time">请选择开始时间</string>
    <string name="as_enter_address">请输入目的地</string>
    <string name="as_start_time_error">租车开始时间不能小于当前时间</string>

    <!-- 其他字符串 -->
    <string name="as_login">登录</string>
    <string name="as_register">注册</string>
    <string name="as_forget_password">忘记密码</string>
    <string name="as_login_user">注册号/姓名/邮箱</string>
    <string name="as_user_identity_num">身份证号</string>
    <string name="as_user_phone">你的手机号</string>
    <string name="as_user_car_num">车牌号</string>
    <string name="as_user_email">电子邮箱</string>
    <string name="as_user_name">姓名</string>
    <string name="as_user_password">登录密码</string>
    <string name="as_confim_pass">确认密码 </string>
    <string name="as_consent">同意</string>
    <string name="as_clause">停车大师服务条款</string>
    <string name="as_submit">提交</string>
    <string name="as_registering">正在注册</string>
    <string name="as_clause_consent">请阅读并同意停车大师服务条款</string>
    <string name="as_parking_spaces">租车位</string>
    <string name="as_rent_parking_spaces">放租车位</string>
    <string name="as_sparing_space_map">当前预订</string>
    <string name="as_sp_reserve">目的地搜索</string>
    <string name="as_nearby_sp">附近车位搜索</string>
    <string name="as_rent_out">放租管理 </string>
     <string name="as_parking_space_man">车位管理 </string>
    <string name="as_parking_space_manager">车位管理 </string>
    <string name="as_earning_report">收益报表</string>
    <string name="as_loading_location">正在定位</string>
     <string name="as_loading_map">正在加载图片</string>
    <string name="as_destination">请输入你的目的地</string>
    <string name="search1">马上搜索</string>
    <string name="stop_length">停车时长:</string>
    <string name="as_stop_length_alert">1-24(小时)(不足30分钟按30分钟计算超过30分钟按1小时计算,输入30代表30分钟)</string>
    <string name="as_reservate">预订</string>
    <string name="as_location">定位</string>
    <string name="as_spacking_space">车位</string>
    <string name="as_history2">历史预订</string>
    <string name="as_spacking_spece_route">车位路线</string>
    <string name="as_start_rent">放租开始时间</string>
    <string name="as_stop_rent">放租结束时间</string>
    <string name="as_price">单价(元)/小时</string>
    <string name="as_indefinite_duration_rent">无限期放租</string>
    <string name="as_indefinite_duration_stop_rent">无限期停租</string>
    <string name="as_modify_daily_rent">日常放租</string>
    <string name="as_modify_temporary_rent">临时放租</string>
    <string name="as_modify_parking_space_info">车位资料</string>
    <string name="as_modify_rent_plan">修改放租方案</string>
    <string name="as_stop_rent2">停租</string>
    <string name="as_start_rent2">放租</string>
    <string name="as_have_parking_space_rent">有车位出租</string>
    <string name="as_payment_back">后台支付</string>
    <string name="as_payment_now">实时支付</string>
    <string name="as_blank">后台支付银行</string>
    <string name="as_blank_account">银行卡号</string>
    <string name="as_payment_method">支付方式</string>
    <string name="as_dentification_type">证件类型</string>
    <string name="as_dentification_num">证件号</string>
    <string name="as_modify_register_info">修改注册资料</string>
    <string name="as_modify_parking_space_info">修改车位资料</string>
    <string name="as_run_out_time">取车时间:</string>
    <string name="as_rent_stop_date">止租日期</string>
    <string name="as_parking_space_search">车位搜索</string>
    <string name="as_exceed_max">请输入1-24(小时)或30(30代表30分钟)</string>
    <string name="as_parking_list">车位列表</string>
     
    <!-- 通用的字符串 -->
    <string name="start_time">起始时间:</string>
    <string name="stop_time">终止时间:</string>
    <string name="start_time1">开始时间:</string>
    <string name="stop_time1">结束时间:</string>
    <string name="registering">正在注册</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="logining">正在登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="parking_log">停车场</string>
    <string name="pull_refresh">下拉刷新</string>
    <string name="loading">正在加载数据</string>
    <string name="loosen_refresh">正在刷新数据</string>
    <string name="drive_route">驾车路线</string>
    <string name="modify_user_info">修改注册信息</string>
    <string name="exist_login">退出登录</string>
    <string name="add">增加</string>
    <string name="query">查询</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="submit">提交</string>
    <string name="logout">确定注销此账号</string>
    <string name="never_alert">下次不提示</string>
    <string name="alert">提示</string>
    <string name="date">日期</string>
    <string name="returnning">返回</string>
    <string name="check_new_version">检查新版本</string>
    <string name="search">搜索</string>
  
</resources>