<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/math_width_hight"
    android:background="@color/yc_grey"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/ai_register_num"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="left|center_vertical"
        android:hint="@string/as_register_num"
        android:inputType="text"
        android:maxLength="15"
        android:paddingLeft="5dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ai_user_name"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="left|center_vertical"
        android:hint="@string/as_user_name"
        android:inputType="text"
        android:maxLength="15"
        android:paddingLeft="5dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ai_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="left|center_vertical"
        android:hint="@string/as_user_password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:paddingLeft="5dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ai_email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="left|center_vertical"
        android:hint="@string/as_user_email"
        android:inputType="textEmailAddress"
        android:maxLength="15"
        android:paddingLeft="5dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/ai_login"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:onClick="controlClick"
            android:text="@string/as_login"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/ai_register"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/ai_login"
            android:onClick="controlClick"
            android:text="@string/as_register"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/ai_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:onClick="controlClick"
        android:text="@string/as_forget_password"
        android:textSize="18sp" />

</LinearLayout>