<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_item_selector"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ai_rmi_parking_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/ai_rmi_mobile_daily_rent"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/tv_selector"
            android:gravity="center"
            android:text="@string/as_modify_daily_rent"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />

        <TextView
            android:id="@+id/ai_rmi_mobile_temporary_rent"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/tv_selector"
            android:gravity="center"
            android:text="@string/as_modify_temporary_rent"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />

        <TextView
            android:id="@+id/ai_rmi_mobile_parking_space_info"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/tv_selector"
            android:gravity="center"
            android:text="@string/as_modify_parking_space_info"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>