<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/head_blue_shape" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/ai_main_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/ad_menu"
            android:onClick="controlClick" />

        <View
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/ai_main_menu"
            android:background="@color/drak_blue" />
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/ai_main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/light_grey"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/ai_main_parking_space"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:onClick="controlClick"
            android:text="@string/as_parking_spaces"
            android:textColor="@drawable/color_selector"
            android:textSize="18sp" />

        <Button
            android:id="@+id/ai_main_rent_parking_space"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:onClick="controlClick"
            android:text="@string/as_rent_parking_spaces"
            android:textColor="@drawable/color_selector"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>