<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/head_blue_shape"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <Button
            android:id="@+id/ai_mp_cancel"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_light_grey_selector"
            android:gravity="center"
            android:onClick="controlClick"
            android:text="@string/cancel"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />

        <Button
            android:id="@+id/ai_mp_sure"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/blue_btn_selector"
            android:gravity="center"
            android:onClick="controlClick"
            android:text="@string/sure"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/as_payment_method"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/setting_shape"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/ai_mp_rl1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="controlClick" >

            <TextView
                android:id="@+id/ai_mp_tv"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:focusable="false"
                android:gravity="left|center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/as_payment_now"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/ai_mp_cb1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:checked="true"
                android:text="" />
        </RelativeLayout>

        <View
            android:id="@+id/ai_mp_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/blue" />

        <RelativeLayout
            android:id="@+id/ai_mp_rl2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="controlClick" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:focusable="false"
                android:gravity="left|center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/as_payment_back"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/ai_mp_cb2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ai_mp_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/setting_shape"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" >

            <EditText
                android:id="@+id/ai_mp_et_bank"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingRight="35dp"
                android:background="@drawable/et_selector"
                android:gravity="left|center_vertical"
                android:hint="@string/as_blank_account"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/ai_amp_express"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="3dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="controlClick"
                android:background="@drawable/express" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/blue" />

        <EditText
            android:id="@+id/ai_mp_et_bank_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/et_selector"
            android:gravity="left|center_vertical"
            android:hint="@string/as_blank_account"
            android:inputType="number"
            android:paddingLeft="5dp"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/ai_mp_payment_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:gravity="left|top"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>